# xllm

./: .actrc  .clippy.toml  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .gitmessage  .markdownlint-cli2.mjs  .mise.toml  .rumdl.toml  .taplo.toml  .yamllint  .yamllint.yml  AGENTS.md  CC-BY-3.0.txt  CHANGELOG.md  CII_BEST_PRACTICES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Criterion.toml  DCO.txt  README.md  REUSE.toml  SECURITY.md  build.rs  cliff.toml  commit-types.toml  committed.toml  deny.toml  hk.pkl  instructions.md  lefthook.yml  mise.toml  opencode.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  tarpaulin.toml  tomlfmt.toml
.act/: README.md
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS  NOTES.md  PULL_REQUEST_TEMPLATE.md  action-pins.toml  actionlint.yaml  dependabot.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/mise/: action.yml
.github/actions/scorecard-action/: action.yml
.github/actions/setup-cargo-tools/: action.yml
.github/actions/setup-rust-cache/: action.yml
.github/actions/setup-rust-env/: action.yml
.github/actions/summary/: action.yml
.github/workflows/: action-pin-checker.yml  bump-version.yml  ci.yml  codeql.yml  crates-publish.yml  mise.yml  nightly.yml  perf.yml  performance.yml  publish.yml  release.yml  scorecard.yml  scorecards.yml
.github/workflows/tests/: act.yml
LICENSES/: MIT.txt
crates/xllm/: Cargo.toml  README.md
crates/xllm-bitnet/: Cargo.toml  README.md
crates/xllm-bitnet/src/: lib.rs
crates/xllm-cli/: Cargo.toml  README.md
crates/xllm-cli/src/: main.rs
crates/xllm-context/: Cargo.toml  README.md
crates/xllm-context/src/: lib.rs
crates/xllm-ggml/: Cargo.toml  README.md
crates/xllm-ggml/src/: lib.rs
crates/xllm-model/: Cargo.toml  README.md
crates/xllm-model/src/: lib.rs
crates/xllm-quantize/: Cargo.toml  README.md
crates/xllm-quantize/src/: lib.rs
crates/xllm-sampling/: Cargo.toml  README.md
crates/xllm-sampling/src/: lib.rs
crates/xllm-tensor/: Cargo.toml  README.md
crates/xllm-tensor/src/: lib.rs
crates/xllm-tokenizer/: Cargo.toml  README.md
crates/xllm-tokenizer/src/: lib.rs
crates/xllm-train/: Cargo.toml  README.md
crates/xllm-train/src/: lib.rs
crates/xllm/src/: lib.rs
docs/: ARCHITECTURE.md  PHASE01_COMPLETE.md  RUNBOOK.md
docs/guidelines/: contribution.md
docs/plan/: XLLM_PLAN.md
scripts/: commit-config.py  file-hygiene.py  update-actions-pins.py
supply-chain/: audits.toml  config.toml
tests/: test_end_to_end.rs  test_validate_inference.rs
