[package]
description = "1-bit ternary kernels for BitNet b1.58 inference"
edition.workspace = true
license.workspace = true
name = "xllm-bitnet"
version.workspace = true

[lints]
workspace = true

[dependencies]
xllm-tensor.workspace = true

[package.metadata.cargo-machete]
ignored = ["xllm-tensor"]
