[package]
authors.workspace = true
categories = ["algorithms", "concurrency"]
description = "Compute graph backend matching the llama.cpp GGML API"
documentation.workspace = true
edition.workspace = true
keywords = ["compute-graph", "ggml", "neural-network", "rayon", "parallel"]
license.workspace = true
name = "xllm-ggml"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.cargo-machete]
ignored = ["rayon", "thiserror", "xllm-tensor"]

[dependencies]
rayon.workspace = true
thiserror.workspace = true
xllm-tensor.workspace = true

[lints]
workspace = true
