[package]
description = "Model loading, weight management, and GGUF format reader"
edition.workspace = true
license.workspace = true
name = "xllm-model"
version.workspace = true

[lints]
workspace = true

[dependencies]
byteorder.workspace = true
memmap2.workspace = true
xllm-ggml.workspace = true
xllm-tensor.workspace = true

[package.metadata.cargo-machete]
ignored = ["byteorder", "memmap2", "xllm-ggml", "xllm-tensor"]
