[package]
authors.workspace = true
categories = ["encoding", "parsing"]
description = "Model loading, weight management, and GGUF format reader"
documentation.workspace = true
edition.workspace = true
keywords = ["gguf", "model-loader", "serialization", "weights", "metadata"]
license.workspace = true
name = "xllm-model"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.cargo-machete]
ignored = ["byteorder", "memmap2"]

[dependencies]
byteorder.workspace = true
half.workspace = true
memmap2.workspace = true
num-traits.workspace = true
thiserror.workspace = true
xllm-tensor.workspace = true

[lints]
workspace = true
