[package]
authors.workspace = true
categories = ["algorithms"]
description = "Token sampling strategies (greedy, top-k, top-p, temperature)"
documentation.workspace = true
edition.workspace = true
keywords = ["sampling", "top-k", "top-p", "temperature", "token-selection"]
license.workspace = true
name = "xllm-sampling"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
fastrand.workspace = true
thiserror.workspace = true
xllm-tensor.workspace = true

[lints]
workspace = true
