[package]
authors.workspace = true
categories = ["science"]
description = "Training and fine-tuning support for xllm models"
documentation.workspace = true
edition.workspace = true
keywords = ["training", "fine-tuning", "learning", "optimizer", "backprop"]
license.workspace = true
name = "xllm-train"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.cargo-machete]
ignored = ["xllm-context", "xllm-ggml", "xllm-model", "xllm-tensor"]

[dependencies]
xllm-context.workspace = true
xllm-ggml.workspace = true
xllm-model.workspace = true
xllm-tensor.workspace = true

[lints]
workspace = true
